@@ -19,7 +19,11 @@ In progress - pre-release
       on the control dits
     - Added "classes/layouts.h" header file for representing different physical
       qudit layouts. Implemented the class(es):
-          qpp::Lattice - Qudits on a multi-dimensional orthogonal grid
+          qpp::Lattice                 - Qudits on a multi-dimensional
+                                         orthogonal grid
+          qpp::PeriodicBoundaryLattice - Qudits on a multi-dimensional
+                                         orthogonal grid with periodic boundary
+                                         conditions
 
 Version 1.3 - 25 July 2019
     - Minimum required CMake version is now 3.2
